<resources>
    <string name="app_name">四万公里</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_title">提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="main_food">餐饮美食</string>
    <string name="main_travel">汽车出行</string>
    <string name="main_shopping">生活购物</string>
    <string name="main_recreation">休闲娱乐</string>
    <string name="main_title">请选择国家</string>
    <string name="main_search_city_tip">出国了，吃、喝、玩、乐也能一搜搞定</string>
    <string name="main_ask_tip">问问去过的他，告诉没去过的她出国是怎样</string>
    <string name="main_party_tip">海外华人交友、Party的最大聚集地</string>
    <string name="main_china_lane_tip">租房、电器、家具、二手，总有你要的</string>
    <string name="main_member_center_tip">积分，优惠劵，我的信息</string>
    <string name="main_more_tip">添加信息拿积分，新手帮助，了解我们</string>
    <string name="search_city">搜全城</string>
    <string name="ask">微攻略</string>
    <string name="party">聚会</string>
    <string name="chinese_lane">唐人巷</string>
    <string name="member_center">会员中心</string>
    <string name="more">更多</string>
    <string name="switch_city">切换国家</string>
    <string name="listview_loading">正在加载数据...</string>
    <string name="nearby">附近</string>
    <string name="food">美食</string>
    <string name="average_per">人均：</string>
    <string name="average_per_2">人均</string>
    <string name="composite_score">综合得分：</string>
    <string name="overall_rating">总体评价：</string>
    <string name="impression">店铺简介</string>
    <string name="review_tip">点评</string>
    <string name="review">用户点评</string>
    <string name="review_detail">评论详情</string>
    <string name="review_content_hint">评价内容</string>
    <string name="subject_distance_500">500</string>
    <string name="subject_distance_1000">1000</string>
    <string name="subject_distance_2000">2000</string>
    <string name="subject_sort_recommend">按推荐度排序</string>
    <string name="subject_sort_signup_time">按登记时间排序</string>
    <string name="subject_sort_review_count">按点评数量排序</string>
    <string name="subject_sort_like_degree">按喜欢程度排序</string>
    <string name="subject_sort_views_count">按浏览量排序</string>
    <string name="subject_sort_pic_count">按图片数量排序</string>
    <string name="subject_sort_composite_review">按综合点评排序</string>
    <string name="subject_sort_cost_per">按人均消费排序</string>
    <string name="subject_collection_start">正在收藏</string>
    <string name="subject_collection_success">收藏成功</string>
    <string name="subject_collection_fail">收藏失败</string>
    <string name="review_detail_composite">综合</string>
    <string name="review_bad">差评</string>
    <string name="review_middle">中评</string>
    <string name="review_good">好评</string>
    <string name="review_very_good">很好</string>
    <string name="review_best">非常好</string>
    <string name="review_add_pic_tips">点评图片</string>
    <string name="review_sort_null">请您先评分</string>
    <string name="review_per_aver">人均消费不能为空</string>
    <string name="review_success">评论成功</string>
    <string name="review_fail">评论失败</string>
    <string name="ask_state_resolved">已解决问题</string>
    <string name="ask_state_unresolved">待解决问题</string>
    <string name="ask_state_reward">高悬赏问题</string>
    <string name="ask_me_answer">我要回答</string>
    <string name="ask_answer_manager">管理问题</string>
    <string name="ask_best_answer">最佳答案</string>
    <string name="ask_comment_best_answer">提问者对最佳答案的评论</string>
    <string name="ask_other_answer">其他回答</string>
    <string name="ask_answer_hint">请输入您的答案</string>
    <string name="ask_answer_commit">提交答案</string>
    <string name="ask_title_me">我要提问</string>
    <string name="ask_title_tip">问题标题</string>
    <string name="ask_content_hint">简单描述下您的问题吧</string>
    <string name="ask_reward_point_tip">悬赏积分</string>
    <string name="ask_category_tip">问题分类</string>
    <string name="ask_keyword_tip">关键字</string>
    <string name="ask_update">修改问题</string>
    <string name="ask_close">关闭问题</string>
    <string name="ask_commit">提交问题</string>
    <string name="ask_detail">问题详情</string>
    <string name="party_contact">联系人</string>
    <string name="party_contact_tel">联系方式</string>
    <string name="party_sex_limit">性别</string>
    <string name="party_apply_remark_hint">备注</string>
    <string name="party_apply">报名</string>
    <string name="subject_name">店铺名称</string>
    <string name="subject_addr">店铺地址</string>
    <string name="subject_tel">店铺电话</string>
    <string name="subject_impression_hint">请填写店铺的简介</string>
    <string name="subject_add">添加</string>
    <string name="username">用户名</string>
    <string name="pswd">密码</string>
    <string name="pswd_sure">密码确认</string>
    <string name="email">邮箱</string>
    <string name="register">注册</string>
    <string name="register_use_protocal">用户使用协议</string>
    <string name="register_disclaimer_tip">免责声明</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="register_disclaimer">一、	接受条款\n四万公里网（www.40000km.com.cn）所提供的各项服务的所有权和运作权均归四万公里网站所有。四万公里网用户使用协议（以下简称“本协议”）系由四万公里网用户与四万公里网站的各项服务所订立的相关权利义务规范。
四万公里网站有权对本协议条款进行修改，修改后的协议一旦公布即有效代替原来的协议。用户可随时查阅并接受最新协议。
用户应仔细阅读本使用协议，用户一旦使用四万公里服务，即视为已了解并完全同意本使用协议各项内容，包括四万公里对使用协议随时所做的任何修改，并成为四万公里用户（以下简称"用户"）。四万公里网站将依据本协议为用户提供服务。不愿接受本协议条款的，请立即停止使用四万公里网所提供的全部服务，不得访问或使用本网站。\n\n

二、	服务内容\n
1．四万公里网运用自己的系统，通过互联网络等方式为用户提供商户信息、点评信息、消费信息、优惠信息、电子刊物、活动等网络服务。\n
2．用户提供的注册资料，用户同意：（1）提供合法、真实、准确、详尽的个人资料； （2）如有变动，及时更新用户资料。如果用户提供的注册资料不合法、不真实、不准确、不详尽的，用户需承担因此引起的相应责任及后果，并且四万公里网站保留终止用户使用四万公里网各项服务的权利。\n
3. 四万公里会不定期通过站内积分或虚拟货币，来奖励或兑换真实物品，最终解释权归四万公里所有。\n
4.请用户理解，四万公里仅提供相关的网络服务，除此之外与相关网络服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均应由用户自行负担。\n\n

三、服务的提供、修改及终止\n
1、用户在接受四万公里网各项服务的同时，同意接受四万公里网提供的各类信息服务。用户在此授权四万公里网站可以向其电子邮件、手机、通信地址等发送推送信息。
用户有权选择不接受四万公里网提供的各类信息服务，并进入四万公里网相关页面进行更改。\n
2、四万公里网保留随时修改或中断服务而不需通知用户的权利。四万公里网有权行使修改或中断服务的权利，不需对用户或任何无直接关系的第三方负责。\n
3、用户对本协议的修改有异议，或对四万公里的服务不满，可以行使如下权利：\n
（1）停止使用四万公里网的网络服务；\n
（2）通过客服等渠道告知四万公里网停止对其服务。 结束服务后，用户使用四万公里网络服务的权利立即终止。在此情况下，四万公里网没有义务传送任何未处理的信息或未完成的服务给用户或任何无直接关系的第三方。\n\n

四、用户行为\n
1.用户注册成功后，便成为四万公里的合法用户，会得到一个密码和帐号。用户需采取合理措施维护其密码和帐号的安全。用户对利用该密码和帐号所进行的一切活动负全部责任；由该等活动所导致的任何损失或损害由用户承担，四万公里不承担任何责任。 用户的密码和帐号遭到未授权的使用或发生其他任何安全问题，用户应当立即通知四万公里。\n
2.用户同意遵守中华人民共和国相关法律法规的所有规定，如用户的行为违反国家法律和法规的任何规定，有可能构成犯罪的，将被追究刑事责任，并由用户承担全部法律责任。\n
3.同时如果四万公里有理由认为您的任何行为，包括但不限于您的任何言论和其它行为违反或可能违反国家法律和法规的任何规定，四万公里可在任何时候不经任何事先通知终止向您提供服务。\n\n

五、	隐私保护\n
1.本协议所称之四万公里用户信息是指符合法律、法规及相关规定，并符合下述范围的信息：\n
（1）用户注册四万公里网或申请四万公里网会员卡时，向四万公里网提供的个人信息；\n
（2）用户在使用四万公里网服务、参加网站活动或访问网站网页时，四万公里网自动接收并记录的用户浏览器端或手机客户端数据，包括但不限于IP地址、网站Cookie中的资料及用户要求取用的网页记录；\n
（3）四万公里网从商业伙伴处合法获取的用户个人信息；\n
（4）其它四万公里网通过合法途径获取的用户个人信息。\n
2.四万公里网承诺： \n
保护用户隐私是四万公里的一项基本政策，非经法定原因或用户事先许可，四万公里不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在四万公里的非公开内容。\n
3. 在下述法定情况下，用户的个人信息将会被部分或全部披露：\n
（1）经用户同意向用户本人或其他第三方披露；\n
（2）根据法律、法规等相关规定，或行政机构要求，向行政、司法机构或其他法律规定的第三方披露；\n
（3）其它四万公里网根据法律、法规等相关规定进行的披露。\n\n

六、用户权利\n
1. 用户的用户名、密码和安全性\n
（1）用户有权选择是否成为四万公里网会员，用户选择成为四万公里网注册用户的，可自行创建、修改昵称。用户名和昵称的命名及使用应遵守相关法律法规并符合网络道德。用户名和昵称中不能含有任何侮辱、威胁、淫秽、谩骂等侵害他人合法权益的文字。\n
（2）用户一旦注册成功，成为四万公里网的会员，将得到用户名（用户邮箱）和密码，并对以此组用户名和密码登入系统后所发生的所有活动和事件负责，自行承担一切使用该用户名的言语、行为等而直接或者间接导致的法律责任。\n
（3）用户有义务妥善保管四万公里网账号、用户名和密码，用户将对用户名和密码安全负全部责任。因用户原因导致用户名或密码泄露而造成的任何法律后果由用户本人负责。\n
（4）用户密码遗失的，可以通过注册电子邮箱发送的链接重置密码，以手机号码注册的用户可以凭借手机号码找回原密码。用户若发现任何非法使用用户名或存在其他安全漏洞的情况，应立即告知四万公里网。\n
2. 用户有权在注册并登陆后对站内商户发布客观、真实、亲身体验的点评信息和图片；\n
3. 用户有权在注册并登陆后自行添加商户、完善站内商户的营业时间、交通等信息；\n
4. 用户有权根据网站相关规定，在发布点评信息等贡献后，取得四万公里网给予的奖励（如贡献值和/或D币及D币兑换等）；\n
5. 用户有权修改其个人账户中各项可修改信息，自行选择昵称和录入介绍性文字，自行决定是否提供非必填项的内容；\n
6. 用户有权参加四万公里网论坛，并发表符合国家法律规定，并符合四万公里网论坛规则的文章及观点；\n
7. 用户有权根据网站相关规定，获得四万公里网给与的奖励（如积分、徽章等）；\n
8．用户有权参加四万公里网组织提供的各项线上、线下活动；\n
9．用户在取得四万公里网发放的会员卡后，有权至所在国家会员卡商户进行消费、获得折扣或积分、并根据网站相关规定进行积分兑换等。\n
10．用户有权在四万公里网上自行浏览、下载和使用优惠券。\n
11．用户有权下载安装四万公里网手机客户端并使用其功能。\n
12. 用户有权根据四万公里网网站规定，享受四万公里网提供的其它各类服务。\n\n

七、用户义务\n
1、不得利用本站危害国家安全、泄露国家秘密，不得侵犯国家社会集体的和公民的合法权益，不得利用本站制作、复制和传播下列信息：\n
（1）煽动抗拒、破坏宪法和法律、行政法规实施的；\n
（2）煽动颠覆国家政权，推翻社会主义制度的；\n
（3）煽动分裂国家、破坏国家统一的；\n
（4）煽动民族仇恨、民族歧视，破坏民族团结的；\n
（5）捏造或者歪曲事实，散布谣言，扰乱社会秩序的；\n
（6）宣扬封建迷信、淫秽、色情、赌博、暴力、凶杀、恐怖、教唆犯罪的；\n
（7）公然侮辱他人或者捏造事实诽谤他人的，或者进行其他恶意攻击的；\n
（8）损害国家机关信誉的；\n
（9）其他违反宪法和法律行政法规的；\n
（10）进行商业广告行为的。\n
2、用户不得通过任何手段恶意注册四万公里网站帐号，包括但不限于以牟利、炒作、套现、获奖等为目的多个账号注册。用户亦不得盗用其他用户帐号。\n
如用户违反上述规定，则四万公里网有权直接采取一切必要的措施，包括但不限于删除用户发布的内容、取消用户在网站获得的星级、荣誉以及虚拟财富，暂停或查封用户帐号，取消因违规所获利益，乃至通过诉讼形式追究用户法律责任等。\n
3、用户需维护点评的客观、真实性，不得利用四万公里网用户身份进行违反诚信的任何行为，包括但不限于：炒作商户，并向商户收取费用或获取利益；为获得利益或好处，参与或组织撰写及发布虚假点评；以差评威胁，要求商户提供额外的利益或好处；进行其他其它影响点评真实性、客观性、干扰扰乱网站正常秩序的违规行为等。\n
如用户违反上述规定，则四万公里网有权采取一切必要的措施，包括但不限于：删除用户发布的内容、取消用户在网站获得的星级、荣誉以及虚拟财富，暂停或查封用户帐号，取消因违规所获利益，乃至通过诉讼形式追究用户法律责任等。\n
4、禁止用户将四万公里网以任何形式作为从事各种非法活动的场所、平台或媒介。未经四万公里网的授权或许可，用户不得借用本站的名义从事任何商业活动，也不得以任何形式将四万公里网作为从事商业活动的场所、平台或媒介。\n
如用户违反上述规定，则四万公里网有权直接采取一切必要的措施，包括但不限于删除用户发布的内容、取消用户在网站获得的星级、荣誉以及虚拟财富，暂停或查封用户帐号，取消因违规所获利益，乃至通过诉讼形式追究用户法律责任等。\n
5、用户在四万公里网以各种形式发布的一切信息，均应符合国家法律法规等相关规定及网站相关规定，符合社会公序良俗，并不侵犯任何第三方主体的合法权益，否则用户自行承担因此产生的一切法律后果，且四万公里网站因此受到的损失，有权向用户追偿。\n\n

七、知识产权\n
1. 四万公里对网站服务所包含的受知识产权或其他法律保护的资料享有相应的权利；除用户依法享有版权内容之外，本网站的整体内容版权归四万公里所有。\n
2. 用户在四万公里上传或发布的内容，用户应保证其为著作权人或已取得合法授权，并且该内容不会侵犯任何第三方的合法权益，用户同意授予四万公里所有上述内容在全球范围内的免费、不可撤销的、永久的、可再许可或转让的独家使用权许可，据上述许可四万公里将有权以展示、推广及其他不为我法律所禁止的方式使用前述内容。\n
3. 四万公里有权利对用户在四万公里上传或发布的内容进行再编辑，并有权利再次出版发行，但如果产生收益，将通过一定渠道返还给著作权人。\n
4. 四万公里所有设计图样以及其他图样、产品、程序及服务名称，均为四万公里及/或其关联公司所享有的商标、标识。任何人不得使用、复制或用作其他用途。\n
5. 未经四万公里网站的明确书面许可，任何第三方不得为任何非私人或商业目的获取或使用本网站的任何部分或通过本网站可直接或间接获得的任何内容、服务或资料。任何第三方违反本协议的规定以任何方式，和/或以任何文字对本网站的任何部分进行发表、复制、转载、更改、引用、链接、下载或以其他方式进行使用，或向任何其他第三方提供获取本网站任何内容的渠道，则对本网站的使用权将立即终止，且任何第三方必须按照本公司的要求，归还或销毁使用本网站任何部分的内容所创建的资料的任何副本。\n
6. 四万公里网未向任何第三方转让本网站或其中的任何内容所相关的任何权益或所有权，且一切未明确向任何第三方授予的权利均归四万公里万展所有。未经本协议明确允许而擅自使用本网站任何内容、服务或资料的，构成对本协议的违约行为，且可能触犯著作权、商标、专利和/或其他方面的法律法规，四万公里网保留对任何违反本协议规定的第三方（包括单位或个人等）提起法律诉讼的权利。\n
7. 本公司可按自身判断随时对本协议进行修改及更新。对本协议的所有改动一经发布即产生法律效力，并适用于改动发布后对本网站的一切访问和使用行为。如用户在修改后的本协议发布后继续使用本网站的，即代表用户接受并同意了这些改动。用户应定期查看本网页，了解对用户具有约束力的本协议的任何改动。\n\n

八、免责声明\n
1. 四万公里对于任何自本网站而获得的他人的信息、内容或者广告宣传等任何资讯（以下统称"信息"），不保证真实、准确和完整性。除非四万公里网以书面形式明确约定，四万公里网对于用户以任何方式（包括但不限于包含、经由、连接或下载）从本网站所获得的任何内容信息，包括但不限于广告、商户信息、点评内容等，不保证其准确性、完整性、可靠性；如果任何单位或者个人通过上述"信息"而进行任何行为，须自行甄别真伪和谨慎预防风险，否则，无论何种原因，本网站不对任何非与本网站直接发生的交易和/或行为承担任何直接、 间接、附带或衍生的损失和责任。\n 
2. 基于互联网的特殊性，四万公里网也不担保服务不会受中断，对服务的及时性、安全性都不作担保，不承担非因四万公里网导致的责任。\n
3. 四万公里网力图使用户能对本网站进行安全访问和使用，但四万公里网不声明也不保证本网站或其服务器是不含病毒或其它潜在有害因素的；因此用户应使用业界公认的软件查杀任何自四万公里网下载文件中的病毒。\n
4. 四万公里网不对用户所发布信息的保存、修改、删除或储存失败负责。对网站上的非因四万公里网故意所导致的排字错误、疏忽等不承担责任。四万公里网有权但无义务，改善或更正本网站任何部分之疏漏、错误。\n
5. 四万公里网内所有用户所发表的用户点评，仅代表用户个人观点，并不表示本网站赞同其观点或证实其描述，本网站不承担用户点评引发的任何法律责任。\n
6、四万公里有权删除四万公里网站内各类不符合法律或协议规定的点评，而保留不通知用户的权利。\n
7．所有发给用户的通告，四万公里网都将通过正式的页面公告、站内信、电子邮件、客服电话、手机短信或常规的信件送达。任何非经四万公里网正规渠道获得的中奖、优惠等活动或信息，四万公里网不承担法律责任。\n
8. 四万公里不保证（包括但不限于）：\n 
-- 本网站适合用户的使用要求； \n
-- 本网站不受干扰，及时、安全、可靠或不出现错误； \n
-- 用户经由本网站取得的任何产品、服务或其他材料符合用户的期望。 \n
    9. 用户使用经由本网站收听的下载的或取得的任何资料，其风险自行负担；因该等使用导致用户电脑系统损坏或资料流失，用户应负完全责任； \n
    10. 基于以下原因而造成的利润、商业信誉、资料损失或其他有形或无形损失，四万公里不承担任何直接、间接、附带、衍生或惩罚性的赔偿： \n
--本网站使用或无法使用； \n
--经由本网站购买或取得的任何产品、资料或服务；\n 
--用户资料遭到未授权的使用或修改； \n
--其他与本网站相关的事宜。 \n
--第三方以任何方式发布或投递欺诈性信息，或诱导用户受到经济损失\n\n

九、关于第三方链接\n
四万公里网络服务可能会提供与其他网站或资源进行链接。对于前述网站或资源是否可以利用，四万公里不承担担保责任。因用户使用上述网站或资源所产生的损失或损害，四万公里也不负担任何责任。 \n\n

十、国际使用之特别敬告\n
您已了解国际互联网的无国界性，同意遵守当地所有关于网上行为及内容之法律法规。您特别同意遵守有关从中国或您所在国家或地区输出信息之传输的所有适用法律法规。\n\n

十一、可分性\n\n
如果本协议的任何条款被视为不合法、无效或因任何原因而无法执行，则此等规定应视为可分割，不影响任何其它条款的法律效力。\n\n

十二、冲突选择\n
本协议是四万公里网与用户注册成为四万公里网用户，使用四万公里网服务之间的重要法律文件，四万公里网或者用户的任何其他书面或者口头意思表示与本协议不一致的，均应当以本协议为准。\n\n

十三、针对搜索引擎\n
四万公里网要求各搜索引擎遵循行业规范，即“拒绝 Robots 访问标准”(Robots Exclusion Standard)，否则将视你的抓取行为是对我网站财产权利和知识产权的侵犯，有权通过法律诉讼维护网站利益。\n\n

十四、法律的适用和管辖\n
1. 本使用协议及您与四万公里网站之关系，均受到中华人民共和国法律管辖。您与四万公里网站就本服务、本使用协议或其它有关事项发生的争议，应首先友好协商解决，协商不成时应提请中国国际经济贸易仲裁委员会仲裁，仲裁裁决是终局性的，对双方均有约束力；\n
2. 四万公里网站未行使或执行本使用协议任何权利或规定，不构成对前述权利或权利之放弃；\n
3. 倘本使用协议之任何规定因与中华人民共和国法律抵触而无效，您依然同意应依照法律，努力使该规定所反映之当事人意向具备效力，且本使用协议其它规定仍应具有完整的效力及效果；\n\n

四万公里网站对本使用协议享有最终解释权。</string>
</resources>