<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/titlebar_back" />

    <!-- 用户名 -->

    <EditText
        android:id="@+id/register_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:hint="@string/username" />

    <!-- 邮箱 -->

    <EditText
        android:id="@+id/register_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <!-- 密码 -->

    <EditText
        android:id="@+id/register_et_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/pswd"
        android:inputType="textPassword" />

    <!-- 密码确认 -->

    <EditText
        android:id="@+id/register_et_pswd_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/pswd_sure"
        android:inputType="textPassword" />

    <!-- 使用协议 -->

    <CheckBox
        android:id="@+id/register_check_box_protocal"
        style="@style/list_second_level_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:checked="true"
        android:text="@string/register_use_protocal" />

    <!-- 注册 -->

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:onClick="onClickRegister"
        android:text="@string/register" />

    <!-- 分割线 -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:src="@drawable/divider" />

    <!-- 免责声明 -->

    <TextView
        style="@style/list_second_level_black_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:singleLine="true"
        android:text="@string/register_disclaimer_tip" />

    <TextView
        style="@style/list_second_level_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:text="@string/register_disclaimer" />

</LinearLayout>