<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <!-- 顶部标题 -->

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/titlebar_back" />

    <!-- 问题标题 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10" >

        <TextView
            style="@style/list_first_level_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ask_question_icon"
            android:drawablePadding="@dimen/margin_5"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/ask_title_tip" />

        <EditText
            android:id="@+id/ask_add_et_title"
            style="@style/et_add_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- 内容 -->

    <EditText
        android:id="@+id/ask_add_et_content"
        style="@style/et_multi_lint_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:hint="@string/ask_content_hint" />

    <!-- 悬赏积分 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10" >

        <TextView
            style="@style/list_first_level_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_reward_point_tip" />

        <EditText
            android:id="@+id/ask_add_et_reward_point"
            style="@style/et_add_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:inputType="number" />
    </LinearLayout>

    <!-- 分类 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10" >

        <TextView
            style="@style/list_first_level_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_category_tip" />

        <Spinner
            android:id="@+id/ask_add_spinner_category_parent"
            style="@style/spinner_add_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5" >
        </Spinner>

        <Spinner
            android:id="@+id/ask_add_spinner_category_child"
            style="@style/spinner_add_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5" >
        </Spinner>
    </LinearLayout>

    <!-- 关键字 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10" >

        <TextView
            style="@style/list_first_level_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_keyword_tip" />

        <EditText
            android:id="@+id/ask_add_et_keyword"
            style="@style/et_add_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp" />
    </LinearLayout>

    <!-- 提交 -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/commit_btn_selector"
        android:onClick="onClickAdd"
        android:text="@string/ask_commit"
        android:textColor="@android:color/white" />

</LinearLayout>